// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Breadcrumb As Button 1`] = `
<div
  className="psds-breadcrumb"
>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-flat psds-theme--dark psds-button--not-icon-only"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-small"
    >
      <div
        className="psds-icon psds-icon--size-small"
      >
        <svg
          aria-label="caret left icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="m8 12 5-5 1.41 1.41L10.83 12l3.58 3.59L13 17"
          />
        </svg>
      </div>
    </div>
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      Clicks once
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Breadcrumb As Link 1`] = `
<div
  className="psds-breadcrumb"
>
  <a
    className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-flat psds-theme--dark psds-button--not-icon-only"
    href="https://duckduckgo.com"
  >
    <div
      className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-small"
    >
      <div
        className="psds-icon psds-icon--size-small"
      >
        <svg
          aria-label="caret left icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="m8 12 5-5 1.41 1.41L10.83 12l3.58 3.59L13 17"
          />
        </svg>
      </div>
    </div>
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      Click as link
    </span>
  </a>
</div>
`;

exports[`Storyshots Components/Breadcrumb Basic 1`] = `
<div
  className="psds-breadcrumb"
>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-flat psds-theme--dark psds-button--not-icon-only"
    disabled={false}
  >
    <div
      className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-small"
    >
      <div
        className="psds-icon psds-icon--size-small"
      >
        <svg
          aria-label="caret left icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="m8 12 5-5 1.41 1.41L10.83 12l3.58 3.59L13 17"
          />
        </svg>
      </div>
    </div>
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      All the things
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Breadcrumb Disabled 1`] = `
<div
  className="psds-breadcrumb"
>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-flat psds-theme--dark psds-button--disabled psds-button--not-icon-only"
    disabled={true}
    onClick={[Function]}
  >
    <div
      className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-small"
    >
      <div
        className="psds-icon psds-icon--size-small"
      >
        <svg
          aria-label="caret left icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="m8 12 5-5 1.41 1.41L10.83 12l3.58 3.59L13 17"
          />
        </svg>
      </div>
    </div>
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      Disabled
    </span>
  </button>
</div>
`;
